// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`methods submitRequest graphql failure 1`] = `
<div
  className={
    Object {
      "data-css-12u9but": "",
    }
  }
>
  <SideEffect(Head)>
    <title>
      BOS:311 — 
      Submission error
    </title>
  </SideEffect(Head)>
  <FormDialog
    narrow={false}
    popup={false}
  >
    <SubmitPane
      error={[Error: Error submitting]}
      state="error"
    />
  </FormDialog>
</div>
`;

exports[`methods submitRequest success 1`] = `
<div
  className={
    Object {
      "data-css-12u9but": "",
    }
  }
>
  <SideEffect(Head)>
    <title>
      BOS:311 — 
      Submitting…
    </title>
  </SideEffect(Head)>
  <FormDialog
    narrow={false}
    popup={false}
  >
    <SubmitPane
      state="submitting"
    />
  </FormDialog>
</div>
`;

exports[`methods submitRequest success 2`] = `
<div
  className={
    Object {
      "data-css-12u9but": "",
    }
  }
>
  <SideEffect(Head)>
    <title>
      BOS:311 — 
      Success: Case 17-000000001
    </title>
  </SideEffect(Head)>
  <FormDialog
    narrow={false}
    popup={false}
  >
    <CaseView
      request={
        Object {
          "address": "City Hall Plaza, Boston, MA 02131",
          "description": "I think that Thanos is here",
          "id": "17-000000001",
          "location": Object {
            "lat": 42.359927299999995,
            "lng": -71.0576853,
          },
          "mediaUrl": "https://pbs.twimg.com/media/C22X9ODXgAABGKS.jpg",
          "requestedAtString": "March 7, 2017, 12:59 PM",
          "service": Object {
            "name": "Cosmic Intervention",
          },
          "status": "closed",
          "statusNotes": "Found Thanos. Smashed him into the floor with all of us standing around.",
          "updatedAtString": "April 8, 2017, 12:59 PM",
        }
      }
      store={
        AppStore {
          "_liveAgentButtonId": "",
          "allServices": AllServices {
            "groups": Array [
              Group {
                "description": "Pet Ownership, Problems with Animals, Rodents & Pests",
                "id": "Animal Control",
                "name": "Animals",
              },
              Group {
                "description": "Certificates & Registrations, Licensing & Permitting, Complaints, Business with the City",
                "id": "business",
                "name": "Business",
              },
              Group {
                "description": "City Jobs, Schools, Library Resources, Internships & Volunteering",
                "id": "education-employment",
                "name": "Education & Employment",
              },
              Group {
                "description": "Voting, Contact Elected Officials, Personal Records (e.g., Births, Deaths & Marriages)",
                "id": "elections-records",
                "name": "Elections & Records",
              },
              Group {
                "description": "Trash, Recycling, Graffiti, Dumping, Street Cleaning, Neighborhood Cleanup",
                "id": "garbage",
                "name": "Garbage, Recycling & Graffiti",
              },
              Group {
                "description": "Crime, Fire Prevention & Control, Healthy Living & Inspections",
                "id": "Health - Safety",
                "name": "Health, Safety & Social Services",
              },
              Group {
                "description": "Home Ownership, Renting, Inspections, Code Enforcement, Permitting, Complaints",
                "id": "housing",
                "name": "Housing, Property & Construction",
              },
              Group {
                "description": "Park Maintenance, Permits, Tree Planting, Donations",
                "id": "parks",
                "name": "Parks & Trees",
              },
              Group {
                "description": "Calendar, Event Permitting, Facility Request, Youth, Arts",
                "id": "entertainment",
                "name": "Recreation, Entertainment & Event Planning",
              },
              Group {
                "description": "Real Estate Tax, Boat and Motor Vehicle Excise, Personal Property",
                "id": "taxes",
                "name": "Taxes & Payments",
              },
              Group {
                "description": "Signs & Signals, Parking, Driving, Public Transportation, Taxi Issues, Road Maintenance",
                "id": "transportation",
                "name": "Transportation, Streets & Sidewalks",
              },
              Group {
                "description": "Water & Sewer, Electric, Gas, Heat",
                "id": "utilities",
                "name": "Utilities",
              },
            ],
            "otherGroup": Group {
              "description": "These services have not yet been categorized",
              "id": "",
              "name": "Other Services",
            },
          },
          "apiKeys": Object {},
          "browserLocation": BrowserLocation {
            "watchId": null,
          },
          "mapLocation": MapLocation {},
          "requestSearch": RequestSearch {
            "searchDisposer": null,
          },
          "ui": Ui {
            "handleResize": [Function],
            "handleScroll": [Function],
          },
        }
      }
      submitted={true}
    />
  </FormDialog>
</div>
`;

exports[`rendering contact 1`] = `
<div
  className={
    Object {
      "data-css-12u9but": "",
    }
  }
>
  <div
    className="p-a300 p-a800--xl br br-t400 br--y css-182uick"
    style={
      Object {
        "maxWidth": 800,
      }
    }
  >
    <div>
      <div>
        <div
          className="sh sh--y"
        >
          <h2
            className="sh-title"
          >
            Cosmic Incursion
          </h2>
        </div>
        <p
          className="m-v300 t--info"
        >
          We’ll use your contact info to send you email about the status of your report and to follow up with you if necessary.
        </p>
        <p
          className="m-v300 t--subinfo"
        >
          Your contact info will not be made public.
           
        </p>
        <label
          className="txt"
        >
          <span
            className="txt-l"
          >
            First Name 
            <span
              className="t--req"
            >
              Required
            </span>
          </span>
          <input
            className="txt-f"
            name="firstName"
            onChange={[Function]}
            placeholder="First Name"
            style={
              Object {
                "width": "100%",
              }
            }
            type="text"
            value=""
          />
        </label>
        <label
          className="txt"
        >
          <span
            className="txt-l"
          >
            Last Name 
            <span
              className="t--req"
            >
              Required
            </span>
          </span>
          <input
            className="txt-f"
            name="lastName"
            onChange={[Function]}
            placeholder="Last Name"
            style={
              Object {
                "width": "100%",
              }
            }
            type="text"
            value=""
          />
        </label>
        <label
          className="txt"
        >
          <span
            className="txt-l"
          >
            Email 
            <span
              className="t--req"
            >
              Required
            </span>
          </span>
          <input
            className="txt-f"
            name="email"
            onChange={[Function]}
            placeholder="Email"
            style={
              Object {
                "width": "100%",
              }
            }
            type="email"
            value=""
          />
        </label>
        <label
          className="txt"
        >
          <span
            className="txt-l"
          >
            Phone
          </span>
          <input
            className="txt-f"
            name="phone"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onPaste={[Function]}
            placeholder="Phone"
            style={
              Object {
                "width": "100%",
              }
            }
            type="tel"
            value=""
          />
        </label>
        <div
          className="m-v500 g"
        >
          <label
            className="cb"
          >
            <input
              checked={false}
              className="cb-f"
              name="remember"
              onChange={[Function]}
              type="checkbox"
              value="true"
            />
            <span
              className="cb-l"
            >
              Remember contact info on this computer
            </span>
          </label>
        </div>
      </div>
      <div
        className="g m-v500 css-1k8tu3j"
      >
        <div
          className="g--8 t--info m-v200 css-hn0yet"
        >
          <span>
            Please fill out 
            <span
              className="t--req"
            >
              required
            </span>
             fields to continue
          </span>
        </div>
        <button
          className="btn g--4"
          disabled={true}
          onClick={[Function]}
        >
          Submit Report
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering location 1`] = `
<div
  className={
    Object {
      "data-css-1xznh3v": "",
    }
  }
>
  <div
    className="p-a300 p-a500 br br-t400 br--y css-182uick"
    style={Object {}}
  >
    <div
      className={
        Object {
          "data-css-1szwbq4": "",
        }
      }
    >
      <form
        action="#"
        className="sf sf--sm sf--y "
        onSubmit={[Function]}
      >
        <div
          className="sf-i"
        >
          <input
            className="sf-i-f"
            onInput={[Function]}
            placeholder="Search for a street address or intersection…"
            type="text"
            value=""
          />
          <button
            className="sf-i-b"
            disabled={true}
            type="submit"
          >
            Search
          </button>
        </div>
      </form>
      <div
        className="m-v400"
      />
      <div
        className="g css-1k8tu3j"
      >
        <div
          className="g--7 t--subinfo m-v200"
        >
          <a
            href="javascript:void(0)"
            onClick={[Function]}
          >
            Continue without location
          </a>
        </div>
        <button
          className="btn g--5"
          disabled={true}
          onClick={[Function]}
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`rendering questions 1`] = `
<div
  className={
    Object {
      "data-css-12u9but": "",
    }
  }
>
  <div
    className="p-a300 p-a800--xl br br-t400 br--y css-182uick"
    style={Object {}}
  >
    <div>
      <div
        className="sh sh--y"
      >
        <h2
          className="sh-title"
        >
          Cosmic Incursion
        </h2>
      </div>
      <div
        className="g g--top"
      >
        <div
          className="g--7 m-v500"
        >
          <textarea
            className={
              Object {
                "data-css-15q8vxe": "",
              }
            }
            defaultValue=""
            name="description"
            onBlur={[Function]}
            onFocus={null}
            onInput={[Function]}
            placeholder="How can we help?"
          />
          <div>
            <label
              className="txt"
            >
              <span
                className="txt-l"
              >
                Please provide any other relevant information:
                 
              </span>
              <textarea
                className="txt-f"
                name="ST-CMTS"
                onChange={[Function]}
                rows="5"
                value=""
              />
            </label>
          </div>
          <hr
            className="hr hr--dash m-v500"
          />
          <div>
            <label
              className="txt"
            >
              <span
                className="txt-l"
              >
                **All cosmic incursion cases should be followed up with a phone call to Alpha Flight.**
                 
              </span>
              <input
                className="txt-f"
                name="INFO-CSIRMV1"
                onChange={[Function]}
                type="text"
                value=""
              />
            </label>
          </div>
          <hr
            className="hr hr--dash m-v500"
          />
          <div>
            <div>
              <div
                className="m-v300"
              >
                <span
                  className="txt-l"
                >
                  How many dimensions have been breached?
                   
                  <span
                    className="t--req"
                  >
                    Required
                  </span>
                </span>
              </div>
              <div
                className="g"
              >
                <div
                  className="g--12"
                >
                  <label
                    className="ra"
                  >
                    <input
                      checked={false}
                      className="ra-f"
                      name="SR-CSIRMV1"
                      onChange={[Function]}
                      type="radio"
                      value="One"
                    />
                    <span
                      className="ra-l"
                    >
                      One
                    </span>
                  </label>
                  <label
                    className="ra"
                  >
                    <input
                      checked={false}
                      className="ra-f"
                      name="SR-CSIRMV1"
                      onChange={[Function]}
                      type="radio"
                      value="Two"
                    />
                    <span
                      className="ra-l"
                    >
                      Two
                    </span>
                  </label>
                  <label
                    className="ra"
                  >
                    <input
                      checked={false}
                      className="ra-f"
                      name="SR-CSIRMV1"
                      onChange={[Function]}
                      type="radio"
                      value="Three"
                    />
                    <span
                      className="ra-l"
                    >
                      Three
                    </span>
                  </label>
                  <label
                    className="ra"
                  >
                    <input
                      checked={false}
                      className="ra-f"
                      name="SR-CSIRMV1"
                      onChange={[Function]}
                      type="radio"
                      value="More than Three"
                    />
                    <span
                      className="ra-l"
                    >
                      More than Three
                    </span>
                  </label>
                  <span />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="g--5 m-v500"
        >
          <div
            className="br br-a200"
          >
            <div
              className="css-19ub58"
              onClick={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              style={Object {}}
            >
              <img
                alt=""
                height="324"
                src="/static/img/image-upload.png"
                style={
                  Object {
                    "display": "block",
                    "height": "auto",
                    "width": "100%",
                  }
                }
                width="479"
              />
              <input
                accept="image/*"
                multiple={false}
                onChange={[Function]}
                style={
                  Object {
                    "display": "none",
                  }
                }
                type="file"
              />
            </div>
            <div
              className="br br-t200"
              style={
                Object {
                  "position": "relative",
                }
              }
            >
              <a
                className="btn btn--w btn--b"
                href="javascript:void(0)"
                onClick={[Function]}
                style={
                  Object {
                    "visibility": "visible",
                  }
                }
              >
                Upload Photo
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        className="g m-v500 css-1k8tu3j"
      >
        <div
          className="g--9 t--info m-v200 css-hn0yet"
        >
          <span>
            Please fill out 
            <span
              className="t--req"
            >
              required
            </span>
             fields to continue
          </span>
        </div>
        <button
          className="btn g--3"
          disabled={true}
          onClick={[Function]}
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;
